sfSandBoxCode/force-app/main/default/objects/Trial__c/Trial__c.object-meta.xml
<CustomObject>
    <label>Trial</label>
    <nameField>
        <label>Trial</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>