sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Control_block_size_ha__c.field-meta.xml
<CustomField>
    <fullName>Control_block_size_ha__c</fullName>
    <label>Control block size (ha)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>