sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Control_Volume_ha_kgs__c.field-meta.xml
<CustomField>
    <fullName>Control_Volume_ha_kgs__c</fullName>
    <label>Control Volume/ha (kgs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>