sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Create_Trial_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Create_Trial_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to create a trial Opportunity for the trial object</description>
    <label>Create Trial Opportunity</label>
    <type>Checkbox</type>
</CustomField>