sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Crop_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Crop_Quantity__c</fullName>
    <label>Crop-Quantity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>