sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <formula>TEXT(Account__r.Customer_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Type</label>
    <type>Text</type>
</CustomField>