sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Delivery_instructions__c.field-meta.xml
<CustomField>
    <fullName>Delivery_instructions__c</fullName>
    <label>Delivery instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>