sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product already sold &amp; delivered</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Customer Pick-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>