sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Free_Trial__c.field-meta.xml
<CustomField>
    <fullName>Free_Trial__c</fullName>
    <label>Free Trial?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>