sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Initial_trial_re_trial__c.field-meta.xml
<CustomField>
    <fullName>Initial_trial_re_trial__c</fullName>
    <label>Initial trial/re-trial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial trial</fullName>
            </value>
            <value>
                <fullName>re-trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>