sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Number_of_off_loading_personnel__c.field-meta.xml
<CustomField>
    <fullName>Number_of_off_loading_personnel__c</fullName>
    <label>Number of off-loading personnel</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>