sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Off_loading_help_needed__c.field-meta.xml
<CustomField>
    <fullName>Off_loading_help_needed__c</fullName>
    <label>Off-loading help needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>