sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Paid_Unpaid__c.field-meta.xml
<CustomField>
    <fullName>Paid_Unpaid__c</fullName>
    <label>Paid/Unpaid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>