sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Payment_method__c.field-meta.xml
<CustomField>
    <fullName>Payment_method__c</fullName>
    <label>Payment method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Mobile Money</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>