sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Payment_schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_schedule__c</fullName>
    <label>Payment schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upfront</fullName>
            </value>
            <value>
                <fullName>On delivery</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>