sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>Account__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone #</label>
    <type>Text</type>
</CustomField>