sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Preferred_delivery_pickup_date_time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_delivery_pickup_date_time__c</fullName>
    <label>Preferred delivery/pickup date&amp;time</label>
    <type>DateTime</type>
</CustomField>