sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Sales_order_signed__c.field-meta.xml
<CustomField>
    <fullName>Sales_order_signed__c</fullName>
    <label>Sales order signed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>