sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Special_trial__c.field-meta.xml
<CustomField>
    <fullName>Special_trial__c</fullName>
    <label>Special trial?</label>
    <length>20</length>
    <type>Text</type>
</CustomField>