sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Town__c.field-meta.xml
<CustomField>
    <fullName>Town__c</fullName>
    <formula>Account__r.Town__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Town</label>
    <type>Text</type>
</CustomField>