sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Trial_block_size__c.field-meta.xml
<CustomField>
    <fullName>Trial_block_size__c</fullName>
    <label>Size of each Treatment block (hectares)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>