sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Trial_Checklist_Completed__c.field-meta.xml
<CustomField>
    <fullName>Trial_Checklist_Completed__c</fullName>
    <label>Trial Checklist Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>