sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Trial_end_date__c.field-meta.xml
<CustomField>
    <fullName>Trial_end_date__c</fullName>
    <label>Trial end date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>