sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Trial_start_date__c.field-meta.xml
<CustomField>
    <fullName>Trial_start_date__c</fullName>
    <label>Trial start date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>