sfSandBoxCode/force-app/main/default/objects/Trial__c/fields/Trial_status__c.field-meta.xml
<CustomField>
    <fullName>Trial_status__c</fullName>
    <label>Trial status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-trial</fullName>
                <default>true</default>
                <label>Pre-trial</label>
            </value>
            <value>
                <fullName>Ready for Delivery</fullName>
            </value>
            <value>
                <fullName>Planted</fullName>
            </value>
            <value>
                <fullName>Harvesting</fullName>
            </value>
            <value>
                <fullName>Closed Trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>