sfSandBoxCode/force-app/main/default/objects/Trial__c/recordTypes/Trial.recordType-meta.xml
<RecordType>
    <fullName>Trial</fullName>
    <active>true</active>
    <label>Trial</label>
</RecordType>