sfSandBoxCode/force-app/main/default/objects/Trial__c/validationRules/Free_Trial_not_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Free_Trial_not_empty</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Free_Trial__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Free_Trial__c</errorDisplayField>
    <errorMessage>Please fill out this field.</errorMessage>
</ValidationRule>