sfSandBoxCode/force-app/main/default/objects/Trial__c/validationRules/Initial_trial_re_trial_not_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Initial_trial_re_trial_not_empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Initial_trial_re_trial__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Initial_trial_re_trial__c</errorDisplayField>
    <errorMessage>Please fill out this field.</errorMessage>
</ValidationRule>