sfSandBoxCode/force-app/main/default/objects/Trial__c/validationRules/Paid_Unpaid_not_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Paid_Unpaid_not_empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Paid_Unpaid__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Paid_Unpaid__c</errorDisplayField>
    <errorMessage>Please fill out this field.</errorMessage>
</ValidationRule>