sfSandBoxCode/force-app/main/default/objects/Trial__c/validationRules/Required_fields_if_Free_trial_is_No.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_fields_if_Free_trial_is_No</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Free_Trial__c ,&quot;No&quot;),
  OR(
     ISPICKVAL(  Sales_order_signed__c  ,&quot;&quot;),
     ISPICKVAL(  Payment_method__c  ,&quot;&quot;),
     ISPICKVAL(  Payment_schedule__c  ,&quot;&quot;)
    )
)</errorConditionFormula>
    <errorMessage>Please fill these fields( &quot;Sales order signed&quot;,&quot;Payment method&quot; and &quot;Payment schedule&quot;)  if the Free Trial field is set to &quot;No&quot;.</errorMessage>
</ValidationRule>