sfSandBoxCode/force-app/main/default/objects/Trial__c/validationRules/Trial_Checklist_Completed_not_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Trial_Checklist_Completed_not_empty</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
   ISPICKVAL( Trial_Checklist_Completed__c  , &quot;&quot;),
   ISPICKVAL( Trial_status__c   , &quot;Planted&quot;)
)</errorConditionFormula>
    <errorMessage>Please fill out this field if Trial Status is &quot;Panted&quot;</errorMessage>
</ValidationRule>