sfSandBoxCode/force-app/main/default/objects/Trial__c/validationRules/Trial_status_not_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Trial_status_not_empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Trial_status__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Trial_status__c</errorDisplayField>
    <errorMessage>Please fill out this field.</errorMessage>
</ValidationRule>