sfSandBoxCode/force-app/main/default/objects/Trial__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Trial_status__c</columns>
    <columns>Trial_start_date__c</columns>
    <columns>Trial_end_date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>